test/fail/integration/_fail_sem_expr_mod_2.hs
x :: Int
x = 4 mod "hello"
main = print "hello"